--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -1,20 +1,20 @@
 - id: "add_to_cart"
-  translation: "Add to Cart"
+  translation: "Ajouter au panier"
   
 - id: "send"
-  translation: "Send Now"
+  translation: "Envoyer"
   
 - id: "subscribe"
-  translation: "Subscribe"
+  translation: "Souscrire"
   
 - id: "read_more"
-  translation: "Read More"
+  translation: "En lire plus"
   
 - id: "subscribe"
-  translation: "Subscribe"
+  translation: "Souscrire"
   
 - id: "subscribe"
-  translation: "Subscribe"
+  translation: "Souscrire"
   
 - id: "subscribe"
-  translation: "Subscribe"
+  translation: "Souscrire"
