--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,20 +1,20 @@
 - id: "add_to_cart"
   translation: "Add to Cart"
-  
+
 - id: "send"
   translation: "Send Now"
-  
+
 - id: "subscribe"
   translation: "Subscribe"
-  
+
 - id: "read_more"
   translation: "Read More"
-  
-- id: "subscribe"
-  translation: "Subscribe"
-  
-- id: "subscribe"
-  translation: "Subscribe"
-  
-- id: "subscribe"
-  translation: "Subscribe"
+
+- id: "your-name"
+  translation: "Your Name"
+
+- id: "your-email"
+  translation: "Your Email"
+
+- id: "your-message"
+  translation: "Your Message"
