--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -1,20 +1,20 @@
 - id: "add_to_cart"
   translation: "Ajouter au panier"
-  
+
 - id: "send"
   translation: "Envoyer"
-  
+
 - id: "subscribe"
   translation: "Souscrire"
-  
+
 - id: "read_more"
   translation: "En lire plus"
-  
-- id: "subscribe"
-  translation: "Souscrire"
-  
-- id: "subscribe"
-  translation: "Souscrire"
-  
-- id: "subscribe"
-  translation: "Souscrire"
+
+- id: "your-name"
+  translation: "Votre nom"
+
+- id: "your-email"
+  translation: "Votre email"
+
+- id: "your-message"
+  translation: "Votre message"
